...
                .padding(bottom = 32.dp)
                .fillMaxWidth())
        RoundUpRow(
            roundUp = roundUp,
            onRoundUpChanged = { roundUp = it },
            text = stringResource(id = R.string.round_up_tip),
            testTag = "roundUpTip",
            modifier = Modifier.padding(bottom = 5.dp)
        )

        Text(
            text = stringResource(
                R.string.tip_amount,
...
